salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/CCI_Integration_System_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Endpoint Setting for the integration System with Vlocity</description>
    <label>Integration_System_Setting</label>
    <pluralLabel>Integration_System_Settings</pluralLabel>
</CustomObject>