salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/Apex_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method_Name__c</fullName>
    <description>Apex Method name to call when Use Apex checkbox is true</description>
    <label>Apex Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>