salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/Auth_Required__c.field-meta.xml
<CustomField>
    <fullName>Auth_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auth. Required?</label>
    <type>Checkbox</type>
</CustomField>