salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/Auth_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Auth_Service_Name__c</fullName>
    <label>Auth. Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>