salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/Auth_Type__c.field-meta.xml
<CustomField>
    <fullName>Auth_Type__c</fullName>
    <description>To capture the Authentication Type for the endpoint</description>
    <inlineHelpText>To capture the Authentication Type for the endpoint</inlineHelpText>
    <label>Auth Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>