salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>System API Endpoint</description>
    <inlineHelpText>System API Endpoint.</inlineHelpText>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>