salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/Logging_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Logging_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, would audit and log all inbound and outbound payloads to the system</description>
    <inlineHelpText>If checked, would audit and log all inbound and outbound payloads to the system</inlineHelpText>
    <label>Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>