salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/Params__c.field-meta.xml
<CustomField>
    <fullName>Params__c</fullName>
    <label>Params</label>
    <length>255</length>
    <type>Text</type>
</CustomField>