salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password Credentials for user authentication</description>
    <inlineHelpText>Password Credentials for user authentication</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>