salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/SSL_Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>SSL_Certificate_Name__c</fullName>
    <description>SSL Certificate Name</description>
    <inlineHelpText>SSL Certificate Name</inlineHelpText>
    <label>SSL Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>