salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <description>System Name</description>
    <label>System_Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>