salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/Transport_Error_Max_Retry__c.field-meta.xml
<CustomField>
    <fullName>Transport_Error_Max_Retry__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Transport Error Max Retry</description>
    <label>Transport Error Max Retry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>