salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/Transport_Layer_Retry_Delay__c.field-meta.xml
<CustomField>
    <fullName>Transport_Layer_Retry_Delay__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Transport Layer Retry Delay</description>
    <label>Transport Layer Retry Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>