salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/Use_Apex__c.field-meta.xml
<CustomField>
    <fullName>Use_Apex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Apex</label>
    <type>Checkbox</type>
</CustomField>