salesforce_sfdx/main/default/objects/CCI_Integration_System_Setting__mdt/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <description>User Name credentials required for authentication</description>
    <inlineHelpText>User Name credentials required for authentication</inlineHelpText>
    <label>UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>